# Strelka

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  Build.md  BuildOpenUSD.md  CMakeLists.txt  README.md  bn.txt  build.sh  conanfile.py  conanfile.txt
cmake/: FindCUDA.cmake  FindOptiX.cmake  StaticAnalyzers.cmake
cmake/FindCUDA/: make2cmake.cmake  parse_cubin.cmake  run_nvcc.cmake
cuda/: BufferView.h  GeometryData.h  Light.h  LocalGeometry.h  LocalShading.h  MaterialData.h  curve.h  helpers.h  random.h  sphere.cu  sphere.h  util.h  whitted.cu  whitted.h  whitted_cuda.h
include/: optixTriangle.h
include/HdStrelka/: RendererPlugin.h
include/display/: Display.h  glfwdisplay.h
include/log/: log.h  logmanager.h
include/materialmanager/: materialmanager.h  mdlLogger.h  mdlMaterialCompiler.h  mdlNeurayLoader.h  mdlPtxCodeGen.h  mdlRuntime.h  mtlxMdlCodeGen.h
include/render/: Camera.h  Lights.h  OptiXRender.h  OptixRenderParams.h  accumulation.h  buffer.h  bvh.h  common.h  computepass.h  debugUtils.h  debugview.h  gbuffer.h  gbufferpass.h  glfwrender.h  materials.h  pathtracer.h  ptrender.h  reduction.h  render.h  renderpass.h  shaderparameters.h  tonemap.h  upscalepass.h  vkrender.h
include/scene/: camera.h  glm-wrapper.hpp  scene.h
include/sceneloader/: gltfloader.h
include/settings/: settings.h
src/: main.cpp  optixTriangle.cu
src/HdStrelka/: BasisCurves.cpp  BasisCurves.h  CMakeLists.txt  Camera.cpp  Camera.h  Instancer.cpp  Instancer.h  Light.cpp  Light.h  Material.cpp  Material.h  MaterialNetworkTranslator.cpp  MaterialNetworkTranslator.h  MdlDiscoveryPlugin.cpp  MdlDiscoveryPlugin.h  MdlParserPlugin.cpp  MdlParserPlugin.h  Mesh.cpp  Mesh.h  RenderBuffer.cpp  RenderBuffer.h  RenderDelegate.cpp  RenderDelegate.h  RenderParam.h  RenderPass.cpp  RenderPass.h  RendererPlugin.cpp  Tokens.cpp  Tokens.h  plugInfo.json  plugInfo.json.in
src/XrRunner/: CMakeLists.txt  OpenXRHelpers.h  OpenXRProgram.cpp  OpenXRProgram.h  main.cpp
src/XrRunner/shaders/: frag.glsl  vert.glsl
src/app/: CMakeLists.txt  CameraController.h  Editor.h  main.cpp
src/display/: CMakeLists.txt  Display.cpp  DisplayFactory.cpp  glfwdisplay.cpp
src/display/metal/: glfwdisplay.h  glfwdisplay.mm  metalcpphelp.cpp
src/display/opengl/: glfwdisplay.cpp  glfwdisplay.h
src/hdRunner/: CMakeLists.txt  SimpleRenderTask.cpp  SimpleRenderTask.h  main.cpp
src/hdRunnerMac/: CMakeLists.txt  main.cpp
src/log/: CMakeLists.txt  logmanager.cpp
src/materialmanager/: CMakeLists.txt  materialmanager.cpp  mdlLogger.cpp  mdlMaterialCompiler.cpp  mdlNeurayLoader.cpp  mdlPtxCodeGen.cpp  mdlRuntime.cpp  mtlxMdlCodeGen.cpp
src/render/: CMakeLists.txt  OptiXRender.cpp  OptixRender.cu  OptixRender_radiance_closest_hit.cu  accumulation.cpp  buffer.cpp  bvh.cpp  debugUtils.cpp  debugview.cpp  glfwrender.cpp  pathtracer.cpp  ptrender.cpp  reduction.cpp  render.cpp  texture_support_cuda.h  tonemap.cpp  upscalepass.cpp  vkrender.cpp
src/render/metal/: MetalBuffer.cpp  MetalBuffer.h  MetalRender.cpp  MetalRender.h
src/render/metal/shaders/: ShaderTypes.h  fullScreen.metal  lights.h  pathtrace.metal  random.h  tonemapper.metal  tonemappers.h
src/render/optix/: CMakeLists.txt  OptiXRender.cpp  OptixBuffer.cpp  OptixBuffer.h  OptixRender.cpp  OptixRender.cu  OptixRender.h  OptixRenderParams.h  OptixRender_radiance_closest_hit.cu  RandomSampler.h  buffer.cpp
src/render/optix/postprocessing/: Tonemappers.cu  Tonemappers.h  Utils.h
src/scene/: CMakeLists.txt  camera.cpp  scene.cpp
src/sceneloader/: CMakeLists.txt  gltfloader.cpp
src/settings/: CMakeLists.txt  settings.cpp
sutil/: Aabb.h  CMakeLists.txt  CUDAOutputBuffer.h  Camera.cpp  Camera.h  Exception.h  GLDisplay.cpp  GLDisplay.h  Matrix.h  PPMLoader.cpp  PPMLoader.h  Preprocessor.h  Quaternion.h  Record.h  Scene.cpp  Scene.h  Trackball.cpp  Trackball.h  WorkDistribution.h  sutil.cpp  sutil.h  sutilapi.h  vec_math.h  vec_math_adv.h
tests/: CMakeLists.txt  tests_main.cpp
tests/materialmanager/: test_materialmanager.cpp
